src/test/ui/issue-27060-2.stderr
error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> $DIR/issue-27060-2.rs:13:5
   |
LL |     data: T, //~ ERROR the size for values of type
   |     ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `T`
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where T: std::marker::Sized` bound
   = note: only the last field of a struct may have a dynamically sized type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
